--- a/index.html
+++ b/index.html
@@ -851,7 +851,18 @@
           <p><a target="_blank"  href="https://www.daloradius.com/">Daloradius</a></p>
         </div>
       </div>
-      <br>
+      <h3>// OTHER MIKROTIK BATCH TOOLS</h3>
+      <div class="row">
+        <div class="column">	  
+      <p><a target="_blank"  href="https://github.com/buananetpbun/FREE-DNS-PING-TEST-DOS-BATCH">Batch: DNS Ping Test</a></p>
+      <p><a target="_blank"  href="https://github.com/buananetpbun/mikrotik-port-scanner">Batch: Winbox Port Scanner</a></p>
+         </div>
+        <div class="column">     
+	  <p><a target="_blank"  href="https://github.com/buananetpbun/MIKROTIK-AUTO-BACKUP-FROM-BATCH">Batch: RouterOS Auto Backup</a></p>
+      <p><a target="_blank"  href="https://github.com/buananetpbun/Restore-Winbox-Sessions-to-Default">Batch: Restore Winbox Session</a></p>	  
+         </div>
+      </div>     
+	  <br>
       <div style="line-height:normal !important; text-align:center">
         Share this tool with your friends<br>
         <!-- Sharingbutton Facebook -->
