--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
         </a>
       </div>
       <div style="margin-top:20px; text-align:center; font-size:14px">
-        © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Creator by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
+        © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
     <div id="myLogin" class="modal-login">
