--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-netwatch-monitoring.html">Send Netwatch Monitoring to Telegram, Whatsapp</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
         <div class="column">
-          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface // Link Aggregation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
+          <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-bonding-interface.html">Bonding Interface / Link Aggregation</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
       <div style="border-top:1px solid #ccc; margin-top:15px; padding-top:10px"><span style="font-size:16px;font-weight:bold">☰ PROTECTION // BACKUP</span></div>
