--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       color:#292929;
       }
       h1, h2 {font-size: 50px; margin-bottom:0px; color:#292929;display:inline;line-height:1.4;clear:both}
-      h3, h4, h5, h6{ font-size:17px; border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
+      h3, h4, h5, h6{ font-size:17px; color:color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
       white-space: -pre-wrap; /* Opera */
