--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@
       <div style="clear:both;"></div>
       <div class="logo">
         <div class="logo-right" style="float:right;">
+        
           <a class="github-button" style="padding-right:5px !important" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
           <a class="github-button" href="https://github.com/buananetpbun/buananetpbun.github.io" data-icon="octicon-star" data-show-count="true" aria-label="star">Star</a>
           <a class="github-button" href="https://github.com/buananetpbun/buananetpbun.github.io/fork" data-show-count="true" data-icon="octicon-repo-forked" aria-label="Fork">Fork</a> 
@@ -672,7 +673,8 @@
           </span>
         </div>
         <div class="logo-left">	  
-          <a href="https://buananetpbun.github.io"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
+		<a href="https://buananetpbun.github.io"><img style="float:left; margin-right:20px" height="50px" width="50px" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
+          
         </div>
       </div>
       <div style="clear:both;"></div>
