--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <style>
+
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
@@ -537,8 +538,17 @@
       /* -- RESPONSIVE -- */
       @media screen and (max-width:1024px){
       h1{font-size:45px}
+      .logo-left a{
+      font-size:20px;
+      } 
+
       } 
       @media screen and (max-width:768px){
+                     .logo-left img{
+      height: 30px;
+      width: 40px; 
+             margin-top:0px !important;
+      }  
       .hide-homepage {display:none}
       h1{font-size:40px}
       .content {
@@ -555,7 +565,9 @@
       justify-content: center;
       display: flex;
       width:100%;
+  
       }
+
       .logo-right {
       text-align: center;
       width: 100%; 
@@ -608,6 +620,7 @@
       font-size: 10pt;
       }
       }
+    
     </style>
   </head>
   <body>
