--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -391,7 +391,7 @@
     </div>
     <div id="wrap">
       <div class="logo">
-        <a href="https://buananetpbun.github.io/mikrotik/"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
+        <a href="https://buananetpbun.github.io"><img style="float:left; margin-top:-3px;margin-right:10px" height="40px" width="50px" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
         <div style="float:right">
           <a class="github-button" href="https://github.com/buananetpbun" data-show-count="true" aria-label="Follow">Follow</a> 
           <a class="github-button" href="https://github.com/buananetpbun/buananetpbun.github.io" data-icon="octicon-star" data-show-count="true" aria-label="star">Star</a>
