--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -294,7 +294,7 @@
     </div>
     <div id="wrap">
       <div class="logo">
-        <a href="https://buananetpbun.github.io/pcc-calculation.html"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a> 
+        <a href="https://buananetpbun.github.io/pcc-calculation.html"><img style="float:left; margin-top:-3px;margin-right:10px" height="40px" width="50px" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         <div style="float:right">
           <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
         </div>
