--- a/index.html
+++ b/index.html
@@ -538,14 +538,17 @@
       @media screen and (max-width:1024px){
       h1{font-size:45px}
       .logo-left a{
-      font-size:20px;
+      font-size:21px;
       } 
       } 
       @media screen and (max-width:768px){
+      .logo-left a{
+      margin-top:5px !important;
+      }          
       .logo-left img{
-      height: 30px;
-      width: 40px; 
-      margin-top:0px !important;
+      height: 40px;
+      width: 50px; 
+      margin-top:-5px !important;
       }  
       .hide-homepage {display:none}
       h1{font-size:40px}
@@ -569,6 +572,16 @@
       width: 100%; 
       }
       @media screen and (max-width:600px){
+      .logo-left a{
+      padding-top:5px !important;
+       font-size:18px;
+      }          
+      .logo-left img{
+      height: 40px;
+      width: 50px; 
+      margin-top:-8px !important;
+        margin-right: 5px !important;
+      }         
       .column {
       float: left;
       width: 100%;
