--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
       @media screen and (max-width:768px){
       .logo-left a{
       margin-top:5px !important;
+	  font-size:20px;
       }          
       .logo-left img{
       height: 40px;
