--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
         </div>
       </div>
       <br><br>
-      <div style="line-height:normal !important; text-align:center">
+      <div style="line-height:normal !important; text-align:center; font-size:13px">
         Share this tool with your friends<br>
         <!-- Sharingbutton Facebook -->
         <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html" target="_blank" rel="noopener" aria-label="">
