--- a/index.html
+++ b/index.html
@@ -534,6 +534,8 @@
       height:13px;
       width:12px;
       }
+	  .footer {margin-top:20px; text-align:center; font-size:14px;}
+	  
       /* -- RESPONSIVE -- */
       @media screen and (max-width:1024px){
       h1{font-size:45px}
@@ -572,7 +574,10 @@
       text-align: center;
       width: 100%; 
       }
+	  .footer {margin-bottom:20px}
+	  }
       @media screen and (max-width:600px){
+	  
       .logo-left a{
       padding-top:5px !important;
        font-size:18px;
@@ -941,7 +946,7 @@
           </div>
         </a>
       </div>
-      <div style="margin-top:20px; text-align:center; font-size:14px">
+      <div class="footer">
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
