--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Free MikroTik RouterOS Online Tools - By BuanaNETPBun.Github.io</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
     <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
       By BuanaNETPBun.Github.io' name='description'>
     <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'>
@@ -40,7 +40,7 @@
       color:#292929;
       }
       h1, h2 {font-size: 50px; margin-bottom:0px; color:#292929;display:inline;line-height:1.4;clear:both}
-      h3, h4, h5, h6{ font-size:17px; color:color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
+      h3, h4, h5, h6{ font-size:17px; color:#292929;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px; line-height:1.4}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
       white-space: -pre-wrap; /* Opera */
@@ -644,7 +644,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
     <div id="mymenu" class="mymenu">
       <div class="mikrotik-logo" >
-        <img src="./img/made-for-mikrotik.png">
+        <img alt="mikrotik" src="./img/made-for-mikrotik.png">
       </div>
       <ul>
         <li><a href="https://buananetpbun.github.io">HOME</a></li>
@@ -692,7 +692,7 @@
           </span>
         </div>
         <div class="logo-left">	  
-          <a href="https://buananetpbun.github.io"><img style="float:left; margin-top:-5px;margin-right:10px" height="50px" width="60px" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
+          <a href="https://buananetpbun.github.io"><img alt="buananetpbun.github.io" style="float:left; margin-top:-5px;margin-right:10px" height="50" width="60" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
         </div>
       </div>
       <div style="clear:both;"></div>
