--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
           <p><a target="_blank"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER CUSTOM TOOLS</h3>
+      <h3>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://freeradius.org">FREERADIUS</a></p>
