--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
           <p><a target="_blank"  href="https://buananetpbun.github.io/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login</a><img class="member-only" title="Member only" src="./img/user.png"></p>
         </div>
       </div>
-      <h3>// MIKROTIK TOOLS AND LOGO DESIGN OFFICIAL</h3>
+      <h3>// MIKROTIK TOOLS AND LOGO DESIGNS OFFICIAL</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a></p>
@@ -837,7 +837,7 @@
           <p><a target="_blank"  href="https://mikrotik.com/client/distributorLockpack">Lockpack creator (need login)</a></p>
         </div>
       </div>
-      <h3>// MIKROTIK OTHER TOOLS LIKE CALCULATOR AND MONITOR</h3>
+      <h3>// MIKROTIK TOOLS LIKE CALCULATOR AND MONITOR</h3>
       <div class="row">
         <div class="column">
           <p><a target="_blank"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
