--- a/index.html
+++ b/index.html
@@ -670,6 +670,16 @@
       </div>
     </div>
     <div class="content">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- top post -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9740800920365268"
+     data-ad-slot="7196071430"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>	
       <div style="width:100%; margin-top:10px"></div>
       <div style="float:left; margin-right:5px; margin-top:8px">
         <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
