--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
       </script>
       <div style="width:100%; margin-top:20px"></div>
       <div style="float:left; margin-right:5px; margin-top:8px">
-        <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+        <div class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
       </div>
       <div style="float:left;margin-top:8px">    
         <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
@@ -797,87 +797,87 @@
       <h3>// MIKROTIK TOOLS AND LOGO DESIGNS OFFICIAL</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a></p>
-          <p><a target="_blank"  href="https://mt.lv/winbox">Winbox-32 (32bit)</a></p>
-          <p><a target="_blank"  href="https://mikrotik.com/download">The Dude</a></p>
-          <p><a target="_blank"  href="https://mikrotik.com/download">Netinstall</a></p>
-          <p><a target="_blank"  href="https://mt.lv/btest">Bandwidth Test</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mt.lv/winbox">Winbox-32 (32bit)</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">The Dude</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Netinstall</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mt.lv/btest">Bandwidth Test</a></p>
         </div>
         <div class="column">
-          <p><a target="_blank"  href="https://i.mt.lv/files/exe/MT_Syslog.exe">MT Syslog Daemon</a></p>
-          <p><a target="_blank"  href="https://mikrotik.com/download/TrafficCounter.zip">MT Traffic Counter</a></p>
-          <p><a target="_blank"  href="https://mikrotik.com/client/supout">Supout.rif viewer (need login)</a></p>
-          <p><a target="_blank"  href="https://mikrotik.com/client/branding">Branding maker (need login)</a></p>
-		  <p><a target="_blank"  href="https://designs.mikrotik.com/">MikroTik Logo, Walpaper, T-Shirt</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://i.mt.lv/files/exe/MT_Syslog.exe">MT Syslog Daemon</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download/TrafficCounter.zip">MT Traffic Counter</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/client/supout">Supout.rif viewer (need login)</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/client/branding">Branding maker (need login)</a></p>
+		  <p><a target="_blank" rel="nofollow"  href="https://designs.mikrotik.com/">MikroTik Logo, Walpaper, T-Shirt</a></p>
 		  
         </div>
       </div>
       <h3>// MIKROTIK MOBILE TOOLS OFFICIAL</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">Mikrotik Winbox iPhone</a></p>
-          <p><a target="_blank"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.tikapp&hl=in">Mikrotik Winbox Android</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://apps.apple.com/id/app/mikrotik/id1323064830?l=id">Mikrotik Winbox iPhone</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.tikapp&hl=in">Mikrotik Winbox Android</a></p>
         </div>
         <div class="column">
-          <p><a target="_blank"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.mikrotikhome">Mikrotik HOME</a></p>
-          <p><a target="_blank"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.bt5">MikroTik Beacon Manager</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.mikrotikhome">Mikrotik HOME</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://play.google.com/store/apps/details?id=com.mikrotik.android.bt5">MikroTik Beacon Manager</a></p>
         </div>
       </div>
       <h3>// MIKROTIK ROUTEROS SOFTWARE DOWNLOAD OFFICIAL</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://mikrotik.com/download">Mikrotik.com/download</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/download">Mikrotik.com/download</a></p>
         </div>
         <div class="column">
-          <p><a target="_blank"  href="http://www.routeros.co.id">Routeros.co.id</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.routeros.co.id">Routeros.co.id</a></p>
         </div>
       </div>
       <h3>// MIKROTIK WIRELESS TOOLS OFFICIAL</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="http://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a></p>
-          <p><a target="_blank"  href="https://shop.duxtel.com.au/article_info.php?articles_id=53">MikroTik Link Planner</a> </p>
-          <p><a target="_blank"  href="http://www.mikrotik.co.id/getfile.php?nf=wireless_abg.zip">Wireless MiniPCI A/B/G</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_tower.php">Antenna Height Calculation</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://shop.duxtel.com.au/article_info.php?articles_id=53">MikroTik Link Planner</a> </p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/getfile.php?nf=wireless_abg.zip">Wireless MiniPCI A/B/G</a></p>
         </div>
         <div class="column">
-          <p><a target="_blank"  href="https://mikrotik.com/calculator">Wireless link calculator (need login)</a></p>
-          <p><a target="_blank"  href="https://mikrotik.com/client/distributorLockpack">Lockpack creator (need login)</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/calculator">Wireless link calculator (need login)</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikrotik.com/client/distributorLockpack">Lockpack creator (need login)</a></p>
         </div>
       </div>
       <h3>// MIKROTIK TOOLS LIKE CALCULATOR AND MONITOR</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
-          <p><a target="_blank"  href="http://www.routerboard.co.id/">RouterBoard Comparison Table</a></p>
-          <p><a target="_blank"  href="http://www.irouteros.com/duibi/duibi.php">MikroTik Product Comparison</a></p>
-          <p><a target="_blank"  href="http://www.mikrotik.co.id/test_proxy.php">RAM Proxy Mikrotik Calculator</a></p>
-          <p><a target="_blank"  href="http://www.mikrotik.co.id/getfile.php?nf=neighbour.zip">Neighbour Viewer dan Mac Telnet</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://www.mikrotik.id/artikel_lihat.php?id=215">Traffic Monitor with Cacti linux</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.routerboard.co.id/">RouterBoard Comparison Table</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.irouteros.com/duibi/duibi.php">MikroTik Product Comparison</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/test_proxy.php">RAM Proxy Mikrotik Calculator</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/getfile.php?nf=neighbour.zip">Neighbour Viewer dan Mac Telnet</a></p>
         </div>
         <div class="column">
-          <p><a target="_blank"  href="http://www.mikrotik.co.id/getfile.php?nf=trafr.tgz">Trafr Sniffer linux</a></p>
-          <p><a target="_blank"  href="https://forum.mikrotik.com/viewtopic.php?t=77193">ATTIX5 Traffic Monitor</a></p>
-          <p><a target="_blank"  href="https://k3dt.eu/supout-reader/">Supout.rif Reader (Unofficial)</a></p>
-          <p><a target="_blank"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://www.mikrotik.co.id/getfile.php?nf=trafr.tgz">Trafr Sniffer linux</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://forum.mikrotik.com/viewtopic.php?t=77193">ATTIX5 Traffic Monitor</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://k3dt.eu/supout-reader/">Supout.rif Reader (Unofficial)</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://www.mkesolutions.net/pdf/routeros-cheat-sheet-v1.1.pdf">PDF RouterOS Console Cheat Sheet</a></p>
         </div>
       </div>
       <h3>// MIKROTIK BILLING HOTSPOT / RADIUS / USERMANAGER</h3>
       <div class="row">
         <div class="column">
-          <p><a target="_blank"  href="https://freeradius.org">FREERADIUS</a></p>
-          <p><a target="_blank"  href="http://dmasoftlab.com">DMA Radius Manager</a></p>
-          <p><a target="_blank"  href="https://billingku.net">Billingku</a></p>
-          <p><a target="_blank"  href="https://laksa19.github.io/">Mikhmon Billing Hotspot</a></p>
-          <p><a target="_blank"  href="https://sarang.web.id">Billing Hotspot Sarang-Net</a></p>
-          <p><a target="_blank"  href="https://topsetting.com">MIXRadius</a></p>
-          <p><a target="_blank"  href="https://rlradius.id/">RL-Radius</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://freeradius.org">FREERADIUS</a></p>
+          <p><a target="_blank" rel="nofollow"  href="http://dmasoftlab.com">DMA Radius Manager</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://billingku.net">Billingku</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://laksa19.github.io/">Mikhmon Billing Hotspot</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://sarang.web.id">Billing Hotspot Sarang-Net</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://topsetting.com">MIXRadius</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://rlradius.id/">RL-Radius</a></p>
         </div>
         <div class="column">
-          <p><a target="_blank"  href=" https://sourceforge.net/projects/the-userman">TheUserman</a></p>
-          <p><a target="_blank"  href="https://github.com/ibnux/phpmixbill">PHPMixBill</a></p>
-          <p><a target="_blank"  href="https://github.com/aviantorichad/MIKROSTATOR">MIKROSTATOR</a></p>
-          <p><a target="_blank"  href="https://mikbotam.net">MIKBOTAM</a></p>
-          <p><a target="_blank"  href="https://www.radboox.com/">RadbooX</a></p>
-          <p><a target="_blank"  href="https://www.daloradius.com/">Daloradius</a></p>
+          <p><a target="_blank" rel="nofollow"  href=" https://sourceforge.net/projects/the-userman">TheUserman</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://github.com/ibnux/phpmixbill">PHPMixBill</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://github.com/aviantorichad/MIKROSTATOR">MIKROSTATOR</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://mikbotam.net">MIKBOTAM</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://www.radboox.com/">RadbooX</a></p>
+          <p><a target="_blank" rel="nofollow"  href="https://www.daloradius.com/">Daloradius</a></p>
         </div>
       </div>
       <h3>// OTHER MIKROTIK BATCH TOOLS</h3>
