--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
       .resp-sharing-button__link {
       text-decoration: none;
       color: #ddd;
-      margin: 0.5em
+      margin: 0.5em;
+	  font-size:16px;
       }
       .resp-sharing-button {
       border-radius: 5px;
@@ -885,7 +886,7 @@
         </div>
       </div>
       <br><br>
-      <div style="line-height:normal !important; text-align:center; font-size:13px">
+      <div style="line-height:normal !important; text-align:center; font-size:15px">
         Share this tool with your friends<br>
         <!-- Sharingbutton Facebook -->
         <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbuananetpbun.github.io%2Findex.html" target="_blank" rel="noopener" aria-label="">
