--- a/login/index.html
+++ b/login/index.html
@@ -19,7 +19,7 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script>
     <div id="mymenu" class="mymenu">
       <div class="mikrotik-logo" >
-        <img src="./img/made-for-mikrotik.png">
+        <img src="../img/made-for-mikrotik.png">
       </div>
       <ul>
         <li><a href="https://buananetpbun.github.io">HOME</a></li>
