--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -404,9 +404,6 @@
       display: flex;
       justify-content: center;
       }	  	
-	  .hide-homepage {
-	  display:none;
-	  }
       }
      
 
@@ -431,9 +428,9 @@
       <div id="homepage" class="hide">
         <button style="width:100px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
 		<span style="font-weight:normal;font-size:14px">hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-        <span class="hide-homepage">
-		<span style="font-weight:normal; font-size:14px"> - Activated: <span id="email_Verified"></span></span>
-		</span>
+        
+		<span style="font-weight:normal; font-size:14px"> [ <span id="email_Verified"></span> ]</span>
+	
       </div>
     </div>
     <div id="wrap">
